--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                   Analyze and optimize slow MongoDB queries to improve database performance, reducing latency and improving response times for end-users
                 </li>
                 <li>
-                  Implemented advanced tracing mechanisms and resolved memory leaks in Node.js applications to enhance system reliability and performance
+                  Implemented advanced tracing mechanisms and resolved memory leaks in NodeJS applications to enhance system reliability and performance
                 </li>
                 <li>
                   Design and develop internal tools to improve visibility into production issues, making it easier for teams to track, prioritize, and resolve technical problems
@@ -522,7 +522,7 @@
                   Designed and developed a dynamic marketplace web application using ReactJS, enhancing the buying and selling experience for users.
                 </li>
                 <li>
-                  Built and maintained RESTful APIs with Node.js (ExpressJS) to support seamless integration across web and mobile platforms.
+                  Built and maintained RESTful APIs with NodeJS (ExpressJS) to support seamless integration across web and mobile platforms.
                 </li>
                 <li>
                   Implemented microservices architecture, developed custom ReactJS modules, and integrated multiple third-party APIs, including payment services, Google APIs, and WebSocket for real-time features.
@@ -552,7 +552,7 @@
                   Developed an intuitive dashboard application using AngularJS, enabling administrators to efficiently manage users, products, and transactions.
                 </li>
                 <li>
-                  Designed and implemented RESTful APIs with Node.js (ExpressJS) to power both web and mobile applications, ensuring seamless functionality across platforms.
+                  Designed and implemented RESTful APIs with NodeJS (ExpressJS) to power both web and mobile applications, ensuring seamless functionality across platforms.
                 </li>
                 <li>
                   Utilized MongoDB for efficient data storage and integrated third-party APIs such as Midtrans and Google Services to enhance payment and user experience capabilities.
@@ -579,7 +579,7 @@
                   Developed internal monolithic web applications using PHP (CodeIgniter), streamlining internal workflows and boosting team productivity.
                 </li>
                 <li>
-                  Designed and implemented APIs for web and mobile applications using Node.js (ExpressJS), integrating various IoT system modules for seamless data exchange.
+                  Designed and implemented APIs for web and mobile applications using NodeJS (ExpressJS), integrating various IoT system modules for seamless data exchange.
                 </li>
                 <li>
                   Built dynamic web applications with ReactJS to display statistics from IoT system modules, utilizing MongoDB for efficient data storage and retrieval.
@@ -612,7 +612,7 @@
                   Built dynamic, responsive web applications with Vue.js and AngularJS, enhancing interactivity and usability for end-users.
                 </li>
                 <li>
-                  Created robust APIs for both web and mobile applications using PHP (CodeIgniter, Laravel, Lumen) and Node.js (ExpressJS), enabling smooth system integration.
+                  Created robust APIs for both web and mobile applications using PHP (CodeIgniter, Laravel, Lumen) and NodeJS (ExpressJS), enabling smooth system integration.
                 </li>
                 <li>
                   Leveraged MySQL for database management and integrated third-party APIs, including Midtrans and Google Services, to enhance functionality and payment capabilities.
@@ -651,7 +651,7 @@
                   Built dynamic, user-centric web applications using AngularJS, enhancing functionality and user experience across platforms.
                 </li>
                 <li>
-                  Designed and developed APIs for web and mobile applications using PHP (Laravel, Lumen) and Node.js (ExpressJS), enabling smooth system integrations.
+                  Designed and developed APIs for web and mobile applications using PHP (Laravel, Lumen) and NodeJS (ExpressJS), enabling smooth system integrations.
                 </li>
                 <li>
                   Developed desktop applications integrated with deep learning technologies (image tracking), providing cutting-edge solutions for clients.
